--- a/package.json
+++ b/package.json
@@ -44,14 +44,6 @@
     "test": "tree-sitter test",
     "parse": "tree-sitter parse"
   },
-  "tree-sitter": [
-    {
-      "scope": "source.lua.toku",
-      "file-types": [ "toku_lua" ],
-      "highlights": "queries/highlights.scm",
-      "injections": "queries/injections-lua.scm"
-    }
-  ],
   "eslintConfig": {
     "env": {
       "commonjs": true,
@@ -93,5 +85,11 @@
         }
       ]
     }
-  }
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.toku",
+      "injection-regex": "^toku$"
+    }
+  ]
 }
